--- a/home.html
+++ b/home.html
@@ -110,7 +110,7 @@
                         <ul>
                             <li>IQ 300+ en Bebidas Alcohólicas</li>
                             <li>Arquitecto de Tuits</li>
-                            <li>Nunca le mojes el zapato con fluidos corporales el zapato</li>
+                            <li>Nunca le mojes el zapato con fluidos corporales</li>
                         </ul>
                     </div>
                 </article>
